<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chopsticksbackground"
    tools:context=".bill">
    <TextView
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu"
        android:gravity="center"
        android:text="@string/billhead"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgConfirm"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="95dp"
        android:layout_below="@+id/bill"
        android:src="@drawable/confirmation" />

    <TextView
        android:id="@+id/orderConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bill"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/hold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderConfirm"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/black"

        android:text="@string/hold"
        />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hold"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="102dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="Exit"
        android:textSize="20dp"
        android:textStyle="bold" />


</RelativeLayout>